* rename appsettings email sender

--- a/SafeCity/SafeCity.EmailSender/SafeCity.EmailSender.csproj
+++ b/SafeCity/SafeCity.EmailSender/SafeCity.EmailSender.csproj
@@ -12,7 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <None Update="appsettings.json">
+      <None Update="appsettingsEmailSender.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
     </ItemGroup>
