--- a/SafeCity/SafeCity.Server.Db/appsettings.json
+++ b/SafeCity/SafeCity.Server.Db/appsettings.json
@@ -1,5 +1,5 @@
 {
     "ConnectionStrings": {
-        "ConnectionDb": "Server=127.0.0.1; Port=15433; Database=team1; Username=t1; Password=admin;"
+        "ConnectionDb": "host=postgres_image;port=5432;database=safecitydb;username=safecityuser;password=safecityuser;"
     }
 }
