--- a/SafeCity/SafeCity.Server/Properties/launchSettings.json
+++ b/SafeCity/SafeCity.Server/Properties/launchSettings.json
@@ -17,10 +17,10 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "TrafficManagementCenter.Server": {
+    "SafeCity.Server": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "applicationUrl": "https://0.0.0.0:5001;http://0.0.0.0:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
