--- a/SafeCity/docker-compose.yml
+++ b/SafeCity/docker-compose.yml
@@ -13,15 +13,10 @@ services:
   
   postgres_image:
     image: postgres:latest
-    ports:
-      - '5432:5432'
     restart: always
     volumes:
-      - db_volume:/var/lib/postgresql/data
-      - ./dbscripts/seed.sql :/docker-entrypoint-initdb.d/seed.sql
+      - /var/lib/postgresql/data:/var/lib/postgresql/data
     environment:
       POSTGRES_USER: "safecityuser"
       POSTGRES_PASSWORD: "safecityuser"
       POSTGRES_DB: "safecitydb"
-volumes:
-  db_volume:
