--- a/SafeCity/docker-compose.yml
+++ b/SafeCity/docker-compose.yml
@@ -1,22 +1,39 @@
 version: '3.4'
 
 services:
-  safecityserver:
+  db:
+    image: postgres:11.4-alpine
+    container_name: postgres
+    ports:
+     - 5432:5432
+    volumes:
+      - ./pg_data:/var/lib/postgresql/data/pgdata
+    environment:
+      POSTGRES_USER: safecityuser
+      POSTGRES_PASSWORD: safecityuser
+      POSTGRES_DB: safecitydb
+      PGDATA: /var/lib/postgresql/data/pgdata
+    restart: always
+  app:
     image: mshuvalov/safecity:latest
-    depends_on:
-      - "postgres_image"
+    container_name: application
     build:
       context: .
       dockerfile: Dockerfile
     ports:
-      - '8090:8090'     
-  
-  postgres_image:
-    image: postgres:latest
-    restart: always
-    volumes:
-      - /var/lib/postgresql/data:/var/lib/postgresql/data
+      - 8090:8090
     environment:
-      POSTGRES_USER: "safecityuser"
-      POSTGRES_PASSWORD: "safecityuser"
-      POSTGRES_DB: "safecitydb"
+        DB_CONNECTION_STRING: "host=db;port=5432;database=safecitydb;username=safecityuser;password=safecityuser"
+        POSTGRES_HOST: db
+    restart: always
+    links:
+      - db
+  nginx:
+    image: nginx:1.17.2-alpine
+    container_name: nginx
+    volumes:
+     - ./default.conf:/etx/nginx/conf.d/default.conf
+    links:
+      - app
+    ports:
+      - 80:80
