+ клиент в оркестр контейнеров

--- a/SafeCity/Dockerfile.client
+++ b/SafeCity/Dockerfile.client
@@ -1,21 +1,21 @@
 FROM mcr.microsoft.com/dotnet/sdk:3.1 AS base
 ENV ASPNETCORE_URLS http://*:8080
-WORKDIR /app
+WORKDIR /client
 EXPOSE 8080
 
 FROM mcr.microsoft.com/dotnet/sdk:3.1 AS build
 WORKDIR /src
-COPY SafeCity.UI.csproj SafeCity.UI/SafeCity.UI.csproj
+COPY SafeCity.UI/SafeCity.UI.csproj SafeCity.UI/SafeCity.UI.csproj
 
 RUN dotnet restore SafeCity.UI/SafeCity.UI.csproj
 COPY . .
 WORKDIR /src
-RUN dotnet build SafeCity.UI/SafeCity.UI.csproj -c Release -o /app
+RUN dotnet build SafeCity.UI/SafeCity.UI.csproj -c Release -o /client
 
 FROM build AS publish
-RUN dotnet publish SafeCity.UI/SafeCity.UI.csproj -c Release -o /app
+RUN dotnet publish SafeCity.UI/SafeCity.UI.csproj -c Release -o /client
 
 FROM base AS final
-WORKDIR /app
-COPY --from=publish /app .
+WORKDIR /client
+COPY --from=publish /client .
 ENTRYPOINT ["dotnet", "SafeCity.UI.dll"]
