--- a/SafeCity/default.conf
+++ b/SafeCity/default.conf
@@ -1,11 +1,8 @@
 server{
   listen 80;
-  server_name _;
+  server_name localhost;
   
   location / {
-    proxy_pass	http://app;
-  }
-  location /api {
-    proxy_pass	http://app/api;
+    proxy_pass	http://app:8090;
   }
 }
