--- a/SafeCity/SafeCity.Server/appsettings.json
+++ b/SafeCity/SafeCity.Server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ConnectionDb": "host=postgres_image;port=5432;database=safecitydb;username=safecityuser;password=safecityuser;"
+    "ConnectionDb": "host=localhost;port=5432;database=safecity;username=safecityuser1;password=admin;"
   },
   "Logging": {
     "LogLevel": {
