--- a/SafeCity/SafeCity.Server.Db/appsettings.json
+++ b/SafeCity/SafeCity.Server.Db/appsettings.json
@@ -1,5 +1,5 @@
 {
     "ConnectionStrings": {
-        "ConnectionDb": "host=postgres_image;port=5432;database=safecitydb;username=safecityuser;password=safecityuser;"
+        "ConnectionDb": "host=localhost;port=5432;database=safecity;username=safecityuser1;password=admin;"
     }
 }
