--- a/SafeCity/SafeCity.UI/SafeCity.UI.csproj
+++ b/SafeCity/SafeCity.UI/SafeCity.UI.csproj
@@ -14,4 +14,8 @@
       <_ContentIncludedByDefault Remove="Pages\_ViewStart.cshtml" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\SafeCity.Server.Db\SafeCity.Server.Db.csproj" />
+    </ItemGroup>
+
 </Project>
