--- a/SafeCity/SafeCity.Server/SafeCity.Server.csproj
+++ b/SafeCity/SafeCity.Server/SafeCity.Server.csproj
@@ -16,7 +16,9 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Model\Model.csproj" />
+      <ProjectReference Include="..\SafeCity.Core\SafeCity.Core.csproj" />
       <ProjectReference Include="..\SafeCity.EmailSender\SafeCity.EmailSender.csproj" />
+      <ProjectReference Include="..\SafeCity.FileStorage\SafeCity.FileStorage.csproj" />
       <ProjectReference Include="..\SafeCity.Server.Db\SafeCity.Server.Db.csproj" />
     </ItemGroup>
 
