--- a/SafeCity/SafeCity.Server.Db/SafeCity.Server.Db.csproj
+++ b/SafeCity/SafeCity.Server.Db/SafeCity.Server.Db.csproj
@@ -33,5 +33,8 @@
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
     </ItemGroup>
+    <ItemGroup>
+      <Folder Include="Migrations" />
+    </ItemGroup>
 
 </Project>
